--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.20.0",
-    "vite": "^6.0.0"
+    "vite": "^6.0.0",
+    "@inlang/paraglide-js": "2.0.1"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
