--- a/package.json
+++ b/package.json
@@ -16,16 +16,12 @@
     "lint": "prettier --check . && eslint ."
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.5",
-    "@eslint/js": "^9.18.0",
     "@inlang/paraglide-js": "2.0.1",
-    "@sveltejs/adapter-node": "^5.2.12",
+    "@sveltejs/adapter-cloudflare": "^6.0.1",
+    "@sveltejs/adapter-node": "^0.0.18",
     "@sveltejs/kit": "^2.20.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "daisyui": "^5.0.6",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-svelte": "^3.0.0",
     "globals": "^16.0.0",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
