--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
     "tailwindcss": "^4.0.15"
+  },
+  "engines": {
+    "node": ">=21",
+    "npm": ">=11"
   }
 }
