--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,14 +2,11 @@
   "name": "supportmail-website",
   "compatibility_date": "2025-03-23",
   "pages_build_output_dir": ".svelte-kit/cloudflare",
-  "compatibility_flags": [
-    "nodejs_compat"
-  ],
-  "workers_dev": true,
-  "route": {
-    "pattern": "supportmail.dev/*",
-    "zone_name": "supportmail.dev",
-    "custom_domain": true
-  },
-  "tsconfig": "./tsconfig.json"
+  "compatibility_flags": [ "nodejs_compat" ],
+  "routes": [
+    {
+      "pattern": "supportmail.dev/*",
+      "zone_name": "supportmail.dev"
+    }
+  ]
 }
