feat(scripts): update start script to run the application

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "start": "echo 'No start script specified' && exit 1",
+    "start": "node build/index.js",
     "build": "vite build",
     "prepare": "svelte-kit sync || echo ''",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
