--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "supportmail-website",
   "description": "SupportMail Website built with SvelteKit",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "start": "node build/index.js",
+    "start": "PORT=6060 HOST=localhost ORIGIN=https://supportmail.dev/ node build/index.js",
     "build": "vite build",
     "preview": "vite preview",
     "prepare": "svelte-kit sync || echo ''",
