--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "supportmail-website",
   "description": "SupportMail Website built with SvelteKit",
   "private": true,
-  "version": "1.3.9",
+  "version": "1.3.",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
