--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "supportmail-website",
   "description": "SupportMail Website built with SvelteKit",
   "private": true,
-  "version": "1.3.11",
+  "version": "1.4.0",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "start": "PORT=6060 HOST=localhost ORIGIN=https://supportmail.dev/ node build/index.js",
+    "local": "cross-env PORT=6060 HOST=localhost ORIGIN=http://localhost:6060 node build/index.js",
+    "start": "cross-env PORT=6060 HOST=localhost ORIGIN=https://supportmail.dev node build/index.js",
     "build": "vite build",
     "preview": "vite preview",
     "prepare": "svelte-kit sync || echo ''",
@@ -22,6 +23,7 @@
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.20.2",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "cross-env": "^7.0.3",
     "daisyui": "^5.0.9",
     "globals": "^16.0.0",
     "prettier": "^3.4.2",
