--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "supportmail-website",
-  "description": "SupportMail Website built with SvelteKit",
+  "description": "SupportMail Website built with SvelteKit & Paraglide-JS",
   "private": true,
   "version": "1.5.2",
   "type": "module",
@@ -20,7 +20,6 @@
     "@inlang/paraglide-js": "^2.0.12",
     "@sveltejs/adapter-auto": "^5.0.0",
     "@sveltejs/adapter-node": "^5.2.12",
-    "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.20.2",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "cross-env": "^7.0.3",
