fix(launch): update launch configuration to use pnpm for development

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node-terminal",
-      "name": "Run Script: dev",
+      "type": "node",
       "request": "launch",
-      "command": "npm run dev",
-      "cwd": "${workspaceFolder}"
+      "name": "Run App (Dev)",
+      "runtimeExecutable": "pnpm",
+      "runtimeArgs": [ "run", "dev" ]
     }
   ]
 }
