chore(package): add package manager specification for consistency

--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
     "tailwindcss": "^4.0.15"
-  }
+  },
+  "packageManager": "pnpm@10.12.1"
 }
