--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
-    "lint": "prettier --check . && eslint ."
+    "lint": "prettier --check . && eslint .",
+    "deploy": "pnpm run build && wrangler deploy",
+    "cf-typegen": "wrangler types ./src/worker-configuration.d.ts"
   },
   "devDependencies": {
-    "@inlang/paraglide-js": "^2.0.12",
-    "@sveltejs/adapter-auto": "^5.0.0",
-    "@sveltejs/adapter-node": "^5.2.12",
+    "@sveltejs/adapter-cloudflare": "^7.0.4",
     "@sveltejs/kit": "^2.20.2",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/vite": "^4.0.14",
     "cross-env": "^7.0.3",
     "daisyui": "^5.0.9",
     "globals": "^16.0.0",
@@ -30,12 +31,14 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "svelte": "^5.25.2",
     "svelte-check": "^4.0.0",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5.0.0",
-    "vite": "^6.2.2"
+    "vite": "^6.2.2",
+    "vite-plugin-devtools-json": "^0.2.0",
+    "wrangler": "^4.22.0"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.14",
-    "tailwindcss": "^4.0.15"
+    "@inlang/paraglide-js": "^2.0.12"
   },
   "packageManager": "pnpm@10.12.1"
 }
