--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-test-results
 node_modules
 
 # Output
 .output
+.vercel
+.netlify
+.wrangler
 /.svelte-kit
 /build
 
@@ -12,7 +14,6 @@ Thumbs.db
 
 # Env
 .env
-
 .env.*
 !.env.example
 !.env.test
@@ -21,5 +22,7 @@ Thumbs.db
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
-# DaisyUI
-.vscode/daisyui.md
+# Paraglide
+src/lib/paraglide
+
+.dev.vars*
