--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -15,8 +15,12 @@
     "enabled": true
   },
   "placement": { "mode": "smart" },
-  "dev": {
-    "host": "localhost",
-    "port": 6060,
+  "compatibility_flags": [ "nodejs_compat" ],
+  "vars": {
+    "PUBLIC_ClientId_Prod": "1082707872565182614",
+    "PUBLIC_botPermissions": "1635040881911",
+    "PUBLIC_DashboardUrl": "/coming-soon",
+    "PUBLIC_githubOrga": "https://github.com/supportmailapp",
+    "PUBLIC_legalHost": "https://legal.supportmail.dev"
   }
 }
