fix: rename PUBLIC_ClientId_Prod to PUBLIC_ClientId in wrangler.jsonc

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,7 +17,7 @@
   "placement": { "mode": "smart" },
   "compatibility_flags": [ "nodejs_compat" ],
   "vars": {
-    "PUBLIC_ClientId_Prod": "1082707872565182614",
+    "PUBLIC_ClientId": "1082707872565182614",
     "PUBLIC_botPermissions": "1635040881911",
     "PUBLIC_DashboardUrl": "/coming-soon",
     "PUBLIC_githubOrga": "https://github.com/supportmailapp",
