--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.5.5",
   "type": "module",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview --port 6060 --host localhost",
@@ -21,6 +22,7 @@
     "@sveltejs/kit": "^2.20.2",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.0.14",
+    "@types/node": "^24.0.6",
     "cross-env": "^7.0.3",
     "daisyui": "^5.0.9",
     "globals": "^16.0.0",
