--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -22,5 +22,10 @@
     "PUBLIC_DashboardUrl": "/coming-soon",
     "PUBLIC_githubOrga": "https://github.com/supportmailapp",
     "PUBLIC_legalHost": "https://legal.supportmail.dev"
+  },
+  "build": {
+    "watch_dir": "./src",
+    "command": "pnpm run build",
+    "cwd": "./src",
   }
 }
