--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -23,6 +23,17 @@
     "PUBLIC_githubOrga": "https://github.com/supportmailapp",
     "PUBLIC_legalHost": "https://legal.supportmail.dev"
   },
+  "env": {
+    "production": {
+      "vars": {
+        "PUBLIC_ClientId": "1082707872565182614",
+        "PUBLIC_botPermissions": "1635040881911",
+        "PUBLIC_DashboardUrl": "/coming-soon",
+        "PUBLIC_githubOrga": "https://github.com/supportmailapp",
+        "PUBLIC_legalHost": "https://legal.supportmail.dev"
+      }
+    }
+  },
   "build": {
     "watch_dir": "./src",
     "command": "pnpm run build",
