fix: update build configuration in wrangler.jsonc for correct working directory

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -35,8 +35,7 @@
     }
   },
   "build": {
-    "watch_dir": "./src",
     "command": "pnpm run build",
-    "cwd": "./src",
+    "cwd": "./", 
   }
 }
