fix: update fallback stats values and add ClientApiOrigin to environment variables

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,6 +17,7 @@
   "placement": { "mode": "smart" },
   "compatibility_flags": [ "nodejs_compat" ],
   "vars": {
+    "ClientApiOrigin": "https://client-api.supportmail.dev",
     "PUBLIC_ClientId": "1082707872565182614",
     "PUBLIC_botPermissions": "1635040881911",
     "PUBLIC_DashboardUrl": "/coming-soon",
