feat: add development environment variables for ClientApiOrigin and other settings

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -23,5 +23,17 @@
     "PUBLIC_DashboardUrl": "/coming-soon",
     "PUBLIC_githubOrga": "https://github.com/supportmailapp",
     "PUBLIC_legalHost": "https://legal.supportmail.dev"
+  },
+  "env": {
+    "dev": {
+      "vars": {
+        "ClientApiOrigin": "https://client-api-dev.supportmail.dev",
+        "PUBLIC_ClientId": "1082707872565182614",
+        "PUBLIC_botPermissions": "1635040881911",
+        "PUBLIC_DashboardUrl": "/coming-soon",
+        "PUBLIC_githubOrga": "https://github.com/supportmailapp",
+        "PUBLIC_legalHost": "https://legal.supportmail.dev"
+      }
+    }
   }
 }
