Implement code changes to enhance functionality and improve performance

--- a/package.json
+++ b/package.json
@@ -18,49 +18,51 @@
     "cf-typegen": "wrangler types ./src/worker-configuration.d.ts"
   },
   "devDependencies": {
-    "@sveltejs/adapter-cloudflare": "^7.0.4",
-    "@sveltejs/kit": "^2.20.2",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/vite": "^4.0.14",
+    "@sveltejs/adapter-cloudflare": "^7.2.1",
+    "@sveltejs/kit": "^2.31.1",
+    "@sveltejs/vite-plugin-svelte": "^5.1.1",
+    "@tailwindcss/vite": "^4.1.12",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.0.6",
+    "@types/node": "^24.3.0",
+    "@types/nodemailer": "^7.0.0",
     "cross-env": "^7.0.3",
-    "daisyui": "^5.0.9",
-    "globals": "^16.0.0",
-    "mdsvex": "^0.12.3",
-    "prettier": "^3.4.2",
-    "prettier-plugin-svelte": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "daisyui": "^5.0.50",
+    "globals": "^16.3.0",
+    "mdsvex": "^0.12.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "schema-dts": "^1.1.5",
-    "svelte": "^5.25.2",
-    "svelte-check": "^4.0.0",
-    "tailwindcss": "^4.0.15",
-    "vite": "^6.2.2",
-    "vite-plugin-devtools-json": "^0.2.0",
-    "wrangler": "^4.22.0"
+    "svelte": "^5.38.2",
+    "svelte-check": "^4.3.1",
+    "tailwindcss": "^4.1.12",
+    "vite": "^6.3.5",
+    "vite-plugin-devtools-json": "^0.2.1",
+    "wrangler": "^4.30.0"
   },
   "dependencies": {
-    "@inlang/paraglide-js": "^2.0.12",
+    "@inlang/paraglide-js": "^2.2.0",
     "chart.js": "^4.5.0",
     "chartjs-adapter-dayjs-4": "^1.0.4",
     "dayjs": "^1.11.13",
-    "discord-api-types": "^0.38.18",
+    "discord-api-types": "^0.38.20",
     "discord.js": "^14.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.0",
+    "mongoose": "^8.17.1",
     "node-cache": "^5.1.2",
+    "nodemailer": "^7.0.5",
     "supportmail-types": "github:supportmailapp/global-types",
     "tsc": "^2.0.4",
     "typescript": "^5.9.2",
-    "zod": "^4.0.14",
+    "zod": "^4.0.17",
     "zod-validation-error": "^4.0.1"
   },
   "packageManager": "pnpm@10.12.1",
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
       "esbuild",
       "sharp",
-      "supportmail-types",
       "workerd"
     ]
   }
