--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "daisyui": "^5.5.14",
     "globals": "^16.5.0",
     "mdsvex": "^0.12.6",
-    "prettier": "^3.8.1",
+    "prettier": "3.6.2",
     "prettier-plugin-svelte": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "schema-dts": "^1.1.5",
@@ -40,12 +40,12 @@
     "wrangler": "^4.60.0"
   },
   "dependencies": {
+    "@discordjs/rest": "^2.6.0",
     "@inlang/paraglide-js": "^2.9.1",
     "chart.js": "^4.5.1",
     "chartjs-adapter-dayjs-4": "^1.0.4",
     "dayjs": "^1.11.19",
     "discord-api-types": "^0.38.37",
-    "discord.js": "^14.25.1",
     "jsonwebtoken": "^9.0.3",
     "ky": "^1.14.3",
     "mongoose": "^8.21.1",
@@ -55,7 +55,7 @@
     "zod": "^4.3.6",
     "zod-validation-error": "^4.0.2"
   },
-  "packageManager": "pnpm@10.27.0",
+  "packageManager": "pnpm@10.28.2",
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
