fix: add preview_urls setting to wrangler.jsonc for enhanced configuration

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -29,5 +29,6 @@
     "custom_domain": true,
     "pattern": "supportmail.dev",
   },
-  "workers_dev": false
+  "workers_dev": false,
+  "preview_urls": true
 }
