fix: add limits configuration to wrangler.jsonc

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -30,5 +30,8 @@
     "pattern": "supportmail.dev",
   },
   "workers_dev": false,
-  "preview_urls": true
+  "preview_urls": true,
+  "limits": {
+    "cpu_ms": 15000
+  }
 }
